--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,6 @@
 [DEFAULT]
 chromedriverfile = C:/chromedriver/chromedriver.exe
+phoneext = 1
 username = {PHONEBUMER}
 password = {PASSWORD}
 refreshtime = 10
