--- a/config.cfg
+++ b/config.cfg
@@ -16,7 +16,10 @@ walletamounttostart = 10
 runheadless = 1
 discordwebhookurl = ''
 
-# Script by Ryan Briggs, lots of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet TT63rNP6fwH6f7fJD1EYCnFMJz7U5nXYw9
-# COTP ref: https://www.cotps.com#/pages/login/register?invite=822569
+#Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
+#    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
+#    Francis: TT63rNP6fwH6f7fJD1EYCnFMJz7U5nXYw9
 
-# Source is on https://github.com/Francis-I-Am/cotps_script/
+#Francis COTP ref: https://www.cotps.com#/pages/login/register?invite=822569
+
+#Source is on https://github.com/Francis-I-Am/cotps_script/
