--- a/config.cfg
+++ b/config.cfg
@@ -5,15 +5,15 @@ username = 234567890
 password = COTPpassword
 refreshtime = 10
 timebetweenchecks = 300
-timezone = CET
+timezone = US/Eastern
 csvfile = tracking.csv
-usecsvfile=0
+usecsvfile = 1
 # OR percentage
-walletpercentagetostart = 1
+walletpercentagetostart = 100
 # OR amount
-walletamounttostart = 10
+walletamounttostart = 5000
 # don't show Chrome browser
-runheadless = 1
+runheadless = 0
 discordwebhookurl = ''
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
