Added reservepercentage and claimreferrals option
Reservepercentage allows you to keep a percentage of your funds in your trading wallet, so you can easier claim them.
Be aware that when you have a big percentage in here, it will NOT be used for trading and thus will not help building your returns further!

Claimreferrals 1 or 0, if set to 1 we will visit the referral claim page every cycle. If you couldn't care less abut claiming referrels, you can turn it off to save some time.

--- a/config.cfg
+++ b/config.cfg
@@ -7,14 +7,18 @@ refreshtime = 10
 timebetweenchecks = 300
 timezone = CET
 csvfile = tracking.csv
-usecsvfile=0
+usecsvfile = 0
 # OR percentage
-walletpercentagetostart = 1
+walletpercentagetostart = 10
 # OR amount
-walletamounttostart = 10
+walletamounttostart = 100
 # don't show Chrome browser
 runheadless = 1
 discordwebhookurl = ''
+# reserve an amount of your total value, to easier check out funds
+reservepercentage=0
+# claim referral rewards or not
+claimreferrals=0
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
