Added error handling
Added new option to restart program if so many errors occur.

Had issues with some accounts not finding the selling button.

Now if it errors (default 3) times it will restart the program.

--- a/config.cfg
+++ b/config.cfg
@@ -15,6 +15,7 @@ walletamounttostart = 5000
 # don't show Chrome browser
 runheadless = 0
 discordwebhookurl = ''
+errorsuntilrestart = 3
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
