--- a/config.cfg
+++ b/config.cfg
@@ -5,17 +5,20 @@ username = 234567890
 password = COTPpassword
 refreshtime = 10
 timebetweenchecks = 300
-timezone = US/Eastern
+timezone = CET
 csvfile = tracking.csv
-usecsvfile = 1
+usecsvfile = 0
 # OR percentage
-walletpercentagetostart = 100
+walletpercentagetostart = 10
 # OR amount
-walletamounttostart = 5000
+walletamounttostart = 100
 # don't show Chrome browser
-runheadless = 0
+runheadless = 1
 discordwebhookurl = ''
-errorsuntilrestart = 3
+# reserve an amount of your total value, to easier check out funds
+reservepercentage=0
+# claim referral rewards or not
+claimreferrals=0
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
