--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,8 @@ discordwebhookurl = ''
 reservepercentage=0
 # claim referral rewards or not
 claimreferrals=0
+# Number of errors that can occur before restarting program
+errorsuntilrestart = 3
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
