--- a/config.cfg
+++ b/config.cfg
@@ -26,6 +26,7 @@ errorsuntilrestart = 3
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
 #    Francis: TT63rNP6fwH6f7fJD1EYCnFMJz7U5nXYw9
 
+#Ryan COTP ref: https://www.cotps.com#/pages/login/register?invite=394432
 #Francis COTP ref: https://www.cotps.com#/pages/login/register?invite=822569
 
 #Source is on https://github.com/Francis-I-Am/cotps_script/
