--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,7 @@
+# cotps_script - config.cfg
+# v1.22
+# Script by Ryan Briggs, with LOTS of mods and code cleanup by Francis.
+
 [DEFAULT]
 chromedriverfile = C:/chromedriver/chromedriver.exe
 countrycode = 1
