Group channel setting
Found a limitation of discord to were you can have only 10 webhooks per server.

Added setting to enable multiple bots to output into same discord channel.

Reduced discord message spam if group setting is enabled.

Enabled groupbotname to add to message to track script iterations.

Added groupcheckin counter. This will increment every timebetweeneachcheck. once it reaches groupcheckin option, it will send a checkin message to discord.

--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,5 @@
 # cotps_script - config.cfg
-# v1.2.2
+# v1.3
 # Script by Ryan Briggs, with LOTS of mods and code cleanup by Francis.
 
 [DEFAULT]
@@ -25,6 +25,11 @@ reservepercentage=0
 claimreferrals=0
 # Number of errors that can occur before restarting program
 errorsuntilrestart = 3
+#This will enable group channel setting, will disable a lot of discord spam
+groupdiscord=0
+groupbotname='testname'
+# this will send a periodic checkin. This number will be multipled by the timebetweeneachcheck time
+groupcheckin=3
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
