Claim referral change
francis mentioned that referrals should be claimed on each cycle.

This commit adds an option to defer to user preference on when they would like to claim referrals. This variable will claim referrals at the beginning of each cycle or at the beginning of a trade cycle.

1 for each cycle and 0 for before each trade cycle

--- a/config.cfg
+++ b/config.cfg
@@ -30,6 +30,10 @@ groupdiscord=0
 groupbotname='testname'
 # this will send a periodic checkin. This number will be multipled by the timebetweeneachcheck time
 groupcheckin=3
+# This variable will claim referrals at the beginning of each cycle or at the beginning of a trade cycle
+# 1 for each cycle and 0 for before each trade cycle
+claimtime=1
+
 
 #Script by Ryan Briggs, with LOTS of mods by Francis. Be nice and reward your dev, send your USDT to TRON wallet:
 #    Ryan: TSD656HMENSsdaSU6QZhyS9xyiicAZ37kv
