Add a bunch of lag tolerance code

--- a/config.cfg
+++ b/config.cfg
@@ -13,16 +13,16 @@ timezone = CET
 csvfile = tracking.csv
 usecsvfile = 0
 # OR percentage
-walletpercentagetostart = 10
+walletpercentagetostart = 100
 # OR amount
-walletamounttostart = 100
+walletamounttostart = 1000000
 # don't show Chrome browser
-runheadless = 1
+runheadless = 0
 discordwebhookurl = ''
 # reserve an amount of your total value, to easier check out funds
 reservepercentage=0
 # claim referral rewards or not
-claimreferrals=0
+claimreferrals=1
 # This variable will claim referrals at the beginning of each cycle or at the beginning of a trade cycle
 # 1 for each cycle and 0 for before each trade cycle
 claimtime=0
